--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "primevue": "^3.49.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
